--- a/index.html
+++ b/index.html
@@ -8,9 +8,13 @@
 </head>
 <body>
     <div class="page">
+        <div class="left">
 
+        </div>
 
+        <div class="photo">
 
+        </div>
 
 
     </div>
